# STUD-PAMSI-minimax

./: CMakeLists.txt  README.md
include/: AIGame.h  AlgorithmFunctions.h  BoardPosition.h  BoardPositionState.h  Connect4.h  Connect4AI.h  Connect4UserInterface.h  DisplayableGame.h  Game.h  SfmlManager.h
src/: AlgorithmFunctions.cpp  Connect4.cpp  Connect4AI.cpp  Connect4UserInterface.cpp  DisplayableGame.cpp  Game.cpp  SfmlManager.cpp  main.cpp
